<resources>
    <string name="app_name">Live Streaming Tv</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="next">Next</string>
    <string name="english_india">English (India)</string>
    <string name="login_with">Login with...</string>
    <string name="scan_qr">Scan QR</string>
    <string name="mobile">Mobile</string>
    <string name="login_with_phone_email"><![CDATA[Login with Phone &amp; Email]]></string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="send">Send</string>
    <string name="we_just_sent_an_sms">We just sent an SMS</string>
    <string name="enter_the_security_code_we_sent_to">Enter the security code we sent to</string>
    <string name="_919865321470">+919865321470</string>
    <string name="verify">Verify</string>
    <string name="don_t_receive_code">Don\'t receive code?</string>
    <string name="resend">Resend</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="verifying">Verifying...</string>
    <string name="otp_has_been_resent">OTP has been resent</string>
    <string name="your_everything_is_ready">Your everything is ready..</string>
    <string name="login_with_qr">Login with QR</string>
    <string name="cancel">Cancel</string>
    <string name="for_you">For You</string>
    <string name="movies">Movies</string>
    <string name="live">Live</string>
    <string name="tv_shows">TV Shows</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="select_whatever_you_what_to_see">Select whatever\nyou what\nto see...</string>
    <string name="top_pick_for_you">Top picks for you</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="basic_plan">Basic Plan</string>
    <string name="start_free_trial">Start Free Trial</string>
    <string name="choose_plan">Choose Plan</string>
    <string name="watch_now">Watch Now</string>
    <string name="add_to_list">Add To List</string>
    <string name="all_live_channels">All Live Channels</string>
    <string name="top_live_show">Top Live Show</string>
    <string name="search_here">Search here...</string>
    <string name="cooking_show">Cooking Show</string>
    <string name="trailer">Trailer</string>
    <string name="cast">Cast</string>
    <string name="all_cast">All Cast</string>
    <string name="less">Less</string>
    <string name="related_movie">Related Movie</string>
    <string name="the_last_of_us">The Last Of Us</string>
    <string name="setting">Setting</string>
    <string name="subtitle">Subtitle</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="playback_speed">Playback Speed</string>
    <string name="_1_0_normal">1.0 Normal</string>
    <string name="_0_5">0.5</string>
    <string name="_1_25">1.25</string>
    <string name="_1_5">1.5</string>
    <string name="quality">Quality</string>
    <string name="auto">Auto</string>
    <string name="full_hd_up_to_1080p">Full HD Up to 1080p</string>
    <string name="hd_up_to_720p">HD Up to 720p</string>
    <string name="data_save">Data Save</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_profile">Add Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="remove_profile">Remove Profile</string>
    <string name="season_1">Season 1</string>

</resources>