<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="2"
    tools:context=".ui.fragments.movies.mediaplayer.MediaPlayerSettingsFragment">

    <!-- Left Side - Select Language Text -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.3"
        android:background="@android:color/transparent"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="48dp" />

    <!-- Right Side - Language List -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:background="@color/white_9_percent"
        android:padding="48dp">

        <!-- Back Btn -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/btn_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:clipToOutline="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:src="@drawable/ic_arrow_back_setting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Setting Title -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_settings"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/btn_back"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Subtitle Title -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_subtitle"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/subtitle"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_settings" />

        <!-- Subtitle On -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_subtitle_on"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:clickable="true"
            android:clipToOutline="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/on"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_subtitle" />

        <!-- Subtitle Off -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_subtitle_off"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:clickable="true"
            android:clipToOutline="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/off"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_subtitle_on" />


        <!-- Playback Speed Title -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_playback_speed"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/playback_speed"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_subtitle_off" />
        <!-- Playback Speed 0.5 -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_playback_speed_0_5"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:clickable="true"
            android:clipToOutline="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/_0_5"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_playback_speed" />
        <!-- Playback Speed 1 Normal -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_playback_speed_1_0"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:clickable="true"
            android:clipToOutline="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/_1_0_normal"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_playback_speed_0_5" />
        <!-- Playback Speed 1.25 -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_playback_speed_1_25"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:clickable="true"
            android:clipToOutline="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/_1_25"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_playback_speed_1_0" />
        <!-- Playback Speed 1.5 -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_playback_speed_1_5"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:clickable="true"
            android:clipToOutline="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/_1_5"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_playback_speed_1_25" />


        <!-- Quality Title -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_quality"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/quality"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_playback_speed_1_5" />
        <!-- Auto -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_auto"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:clickable="true"
            android:clipToOutline="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/auto"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_quality" />
        <!-- Full HD Upto 1080p -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_full_hd_1080"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:clickable="true"
            android:clipToOutline="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/full_hd_up_to_1080p"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_auto" />
        <!-- HD Upto 720p -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_hd_720"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:clickable="true"
            android:clipToOutline="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/hd_up_to_720p"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_full_hd_1080" />
        <!-- Data Save -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_data_save"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:clickable="true"
            android:clipToOutline="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/data_save"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_hd_720" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>