<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="2"
    tools:context=".ui.fragments.profile.ProfileMenuFragment">

    <!-- Left Side - Select Language Text -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.3"
        android:background="@android:color/transparent"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="48dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:background="@color/white_9_percent"
        android:padding="48dp">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/done_avt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_profile"
            style="@style/HeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/profile"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/iv_profile"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_settings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:clipToOutline="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:cardBackgroundColor="@color/white_9_percent"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/white"
            app:strokeWidth="0dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/sp_settings"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_settings" />
        </com.google.android.material.card.MaterialCardView>
        <!-- Edit Profile -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:clickable="true"
            android:clipToOutline="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:nextFocusUp="@id/btn_settings"
            android:nextFocusDown="@id/tv_add_profile"
            android:padding="8dp"
            android:text="@string/edit_profile"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

        <!-- Add Profile -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_add_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:clipToOutline="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:nextFocusUp="@id/tv_edit_profile"
            android:nextFocusDown="@id/tv_remove_profile"
            android:padding="8dp"
            android:text="@string/add_profile"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_edit_profile" />

        <!-- Remove Profile -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_remove_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:clipToOutline="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:nextFocusUp="@id/tv_add_profile"
            android:nextFocusDown="@id/tv_sign_out"
            android:padding="8dp"
            android:text="@string/remove_profile"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_profile" />

        <!-- Sign Out -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:clipToOutline="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:nextFocusUp="@id/tv_remove_profile"
            android:padding="8dp"
            android:text="@string/sign_out"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_remove_profile" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>